<resources>
    <string name="app_name">dietSkuy @Eng</string>
    <string name="dietskuy">"DietSkuy"</string>
    <string name="workoutSkuy">"Workout Skuy!"</string>
    <string name="_10_minutes_workout">10-minutes-workout</string>
    <string name="new_journal">New Journal</string>
    <string name="list_journal">List Journal</string>
    <string name="change_language">Change Language</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="timer">10:00</string>
    <string name="pause">Pause</string>
    <string name="pick_alarm_time">Make Reminder</string>
    <string name="reminder_text">Alarm Not Set</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="noti_channel_default">Default: Dont forget to 10-minutes-workout !</string>
    <string name="noti_channel_second">Secondary: Dont forget to 10-minutes-workout !</string>
    <string name="alarm_set_title">Reminder :)</string>
    <string name="alarm_set_body">Dont forget to Workout</string>
    <string name="boot_complete">Boot Completed</string>
    <string name="connectivity_changed">Connectivity Changed</string>
    <string name="monday">Monday</string>
    <string name="monday_activity">Running to keep healthy</string>
    <string name="input_category">Input Category</string>
    <string name="enter_text">Enter new category</string>
    <string name="add">add</string>
    <string name="choose_image">Choose Image</string>
    <string name="explanation_denied_permission">You\'re denied permission to access gallery, we couldn\'t pick the image right now. Sorry. If you\'re changes your mind, you can give permission to access your gallery and change the image for this application. Thank you for your attention :)</string>
    <string name="oops">Oops :")</string>
    <string name="no_internet_connection">No internet connections</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="ok">ok</string>
    <string name="add_name">+ Add Name</string>
    <string name="add_category">+ Add Category</string>
    <string name="what_s_going_on_today">What\'s going on today...</string>
    <string name="tell_something">today story...</string>
    <string name="submit">Submit</string>
    <string name="choosed_quote">Today quote is...</string>
    <string name="get_quote">quote of the day</string>
    <string name="my_quotes_today">My Quotes Today</string>
</resources>