<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="24dp"
    tools:context=".NewJurnalActivity">

    <TextView
        android:id="@+id/textView_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_quotes_today" />

    <EditText
        android:id="@+id/edit_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choosed_quote"
        android:padding="12dp"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>

    <Button
        android:id="@+id/button_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_quote" />

    <Button
        android:id="@+id/button_add_name"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/add_name" />

    <Button
        android:id="@+id/button_add_category"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_category" />

    <TextView
        android:id="@+id/textView_goingon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/what_s_going_on_today" />

    <EditText
        android:id="@+id/edit_story_jurnal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tell_something"
        android:padding="12dp"
        android:lines="6"
        android:background="@android:drawable/editbox_background"/>

    <Button
        android:id="@+id/button_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>